--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -50,3 +50,19 @@
     --ring: 240 4.9% 83.9%;
   }
 }
+
+.python-container {
+  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b79] dark:border dark:border-[#b7bdc2] hover:animate-bounce;
+}
+
+.java-container {
+  @apply sm:w-[420px] h-[100px] xs:w-[340px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b79] dark:border dark:border-[#b7bdc2] hover:animate-bounce;
+}
+
+.javascript-container {
+  @apply sm:w-[350px] h-[100px] xs:w-[290px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b79] dark:border dark:border-[#b7bdc2] hover:animate-bounce;
+}
+
+.rust-container {
+  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b79] dark:border dark:border-[#b7bdc2] hover:animate-bounce;
+}
