--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -51,18 +51,35 @@
   }
 }
 
+@keyframes pulseAnimation {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+}
+
+.python-container:hover,
+.java-container:hover,
+.javascript-container:hover,
+.rust-container:hover {
+  animation: pulseAnimation 1.5s infinite;
+}
+
 .python-container {
-  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b47] dark:border dark:border-[#b7bdc247] hover:animate-bounce;
+  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-md dark:shadow-none rounded-xl border border-[#26292b30] dark:border dark:border-[#b7bdc230];
 }
 
 .java-container {
-  @apply sm:w-[420px] h-[100px] xs:w-[340px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b47] dark:border dark:border-[#b7bdc247] hover:animate-bounce;
+  @apply sm:w-[420px] h-[100px] xs:w-[340px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-md dark:shadow-none rounded-xl border border-[#26292b30] dark:border dark:border-[#b7bdc230];
 }
 
 .javascript-container {
-  @apply sm:w-[350px] h-[100px] xs:w-[290px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b47] dark:border dark:border-[#b7bdc247] hover:animate-bounce;
+  @apply sm:w-[350px] h-[100px] xs:w-[290px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-md dark:shadow-none rounded-xl border border-[#26292b30] dark:border dark:border-[#b7bdc230];
 }
 
 .rust-container {
-  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-lg dark:shadow-none rounded-xl border border-[#26292b47] dark:border dark:border-[#b7bdc247] hover:animate-bounce;
+  @apply sm:w-[300px] h-[100px] xs:w-[240px] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-md dark:shadow-none rounded-xl border border-[#26292b30] dark:border dark:border-[#b7bdc230];
 }
