--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -153,7 +153,7 @@
 }
 
 .code-box {
-  @apply md:h-[400px] xs:h-[350px] bg-transparent dark:bg-[#798189] backdrop-blur-[] bg-opacity-15 dark:backdrop-blur-[] dark:bg-opacity-10 p-4 rounded-xl shadow-lg dark:shadow-none border border-[#26292b15] dark:border-[#b7bdc220];
+  @apply md:h-[400px] xs:h-[350px] bg-transparent dark:bg-[#798189] bg-opacity-15 dark:bg-opacity-10 p-4 rounded-xl shadow-lg dark:shadow-none border border-[#26292b15] dark:border-[#b7bdc220];
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
@@ -376,4 +376,10 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app-button {
+  @apply rounded-xl py-2 px-4 border border-[#26292b15] dark:border-[#b7bdc220];
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
 }
