--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -383,3 +383,9 @@
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
+
+.blog-card {
+  @apply bg-transparent dark:bg-[#798189] bg-opacity-15 dark:bg-opacity-10 rounded-xl shadow-lg dark:shadow-none border border-[#26292b15] dark:border-[#b7bdc220];
+  backdrop-filter: blur(3px);
+  -webkit-backdrop-filter: blur(3px);
+}
