added conceptsData for programming concepts, fixed mbilenav state for selected concept, separated codeicon into a separate file, updated mobilenav to render AI concept name depending on the route

--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -390,3 +390,8 @@
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
+
+.fixed-size-icon {
+  width: 20px;
+  height: 20px;
+}
