--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -51,6 +51,10 @@
   }
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   body {
     @apply bg-[#eceff2] dark:bg-[#0f0f12];
@@ -122,7 +126,7 @@
 .c-container,
 .javascript-container,
 .rust-container {
-  @apply flex-auto p-4 w-full lg:w-[50%] sm:w-[60%] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-sm dark:shadow-none rounded-xl border border-[#26292b15] dark:border dark:border-[#b7bdc220];
+  @apply flex-auto p-4 w-[95%] lg:w-[50%] sm:w-[60%] bg-transparent backdrop-blur-[4px] dark:bg-transparent dark:backdrop-blur-[4px] shadow-sm dark:shadow-none rounded-xl border border-[#26292b15] dark:border dark:border-[#b7bdc220];
 }
 
 .feature-card {
