--- a/syntaxbridge/app/globals.css
+++ b/syntaxbridge/app/globals.css
@@ -148,7 +148,7 @@
 }
 
 .code-box {
-  @apply md:h-[400px] xs:h-[350px] bg-transparent dark:bg-[#798189] bg-opacity-15 dark:bg-opacity-10 p-4 rounded-xl shadow-lg dark:shadow-none border border-[#26292b15] dark:border-[#b7bdc220];
+  @apply xs:h-[500px] lg:h-[700px] bg-transparent dark:bg-[#798189] bg-opacity-15 dark:bg-opacity-10 p-4 rounded-xl shadow-lg dark:shadow-none border border-[#26292b15] dark:border-[#b7bdc220];
   backdrop-filter: blur(3px);
   -webkit-backdrop-filter: blur(3px);
 }
